# ramu_rs

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  ddr4config.toml  gen_cxx_files.sh  ramu_rs_cpp.cc  ramu_rs_cpp.h  test.cc
src/: config.rs  controller.rs  ddr4.rs  dram.rs  lib.rs  memory.rs  refresh.rs  request.rs  rowpolicy.rs  rowtable.rs  scheduler.rs  utils.rs
tests/: sequential_read_test.rs
