[package]
authors = ["Jiangqiu Shen"]
description = "A simple, fast, and safe Rust library for ramulator"
edition = "2021"
license = "MIT"
name = "ramu_rs"
repository = "https://github.com/shenjiangqiu/ramu_rs"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = {version = "1.0.133", features = ["c++20"]}
enum-as-inner = "0.6.1"
num_enum = "0.7.3"
serde = {version = "1.0.215", features = ["derive"]}
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
